--- a/Amalgam/Amalgam.vcxproj
+++ b/Amalgam/Amalgam.vcxproj
@@ -906,6 +906,7 @@
     <ClCompile Include="src\Hooks\CPlayerResource_GetPlayerName.cpp" />
     <ClCompile Include="src\Hooks\CTFGCClientSystem_UpdateAssignedLobby.cpp" />
     <ClCompile Include="src\Hooks\CTFHudDeathNotice_AddAdditionalMsg.cpp" />
+    <ClCompile Include="src\Hooks\CTFWeaponBase_IsAllowedToWithdrawFromCritBucket.cpp" />
     <ClCompile Include="src\Hooks\CThirdPersonManager_Update.cpp" />
     <ClCompile Include="src\Hooks\CViewRender_PerformScreenOverlay.cpp" />
     <ClCompile Include="src\Hooks\IBaseClientDLL_DispatchUserMessage.cpp" />
@@ -1191,6 +1192,7 @@
     <ClInclude Include="src\SDK\Definitions\Main\CParticleProperty.h" />
     <ClInclude Include="src\SDK\Definitions\Main\CSniperDot.h" />
     <ClInclude Include="src\SDK\Definitions\Main\IAchievementMgr.h" />
+    <ClInclude Include="src\SDK\Definitions\Main\IClientEntity.h" />
     <ClInclude Include="src\SDK\Definitions\Main\MD5.h" />
     <ClInclude Include="src\SDK\Definitions\Misc\bitvec.h" />
     <ClInclude Include="src\SDK\Definitions\Misc\BSPFlags.h" />
@@ -1292,7 +1294,6 @@
     <ClInclude Include="src\SDK\Definitions\Main\CTFPlayerResource.h" />
     <ClInclude Include="src\SDK\Definitions\Main\CTFWeaponBase.h" />
     <ClInclude Include="src\SDK\Definitions\Main\CUserCmd.h" />
-    <ClInclude Include="src\SDK\Definitions\Main\IClientEntity.h" />
     <ClInclude Include="src\SDK\Definitions\Main\IClientNetworkable.h" />
     <ClInclude Include="src\SDK\Definitions\Main\IClientRenderable.h" />
     <ClInclude Include="src\SDK\Definitions\Main\IClientThinkable.h" />
@@ -1361,6 +1362,7 @@
     <ClInclude Include="src\SDK\Helpers\Color\Color.h" />
     <ClInclude Include="src\SDK\Helpers\Draw\Draw.h" />
     <ClInclude Include="src\SDK\Helpers\Draw\Icons.h" />
+    <ClInclude Include="src\SDK\Helpers\Entities\Dormancy.h" />
     <ClInclude Include="src\SDK\Helpers\Entities\Entities.h" />
     <ClInclude Include="src\SDK\Helpers\Fonts\Fonts.h" />
     <ClInclude Include="src\SDK\Helpers\Particles\Particles.h" />
